deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: autoshift-policy-report
spec:
  replicas: 1
  selector:
    matchLabels:
      app: autoshift-policy-report
  template:
    metadata:
      labels:
        app: autoshift-policy-report
    spec:
      containers:
        - name: autoshift-policy-report
          image: image-registry.openshift-image-registry.svc:5000/autoshift-policy-report/autoshift-policy-report:latest

          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: management
              containerPort: 8081
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: management
            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 6

          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: management
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6

---
apiVersion: v1
kind: Service
metadata:
  name: autoshift-policy-report
spec:
  selector:
    app: autoshift-policy-report
  ports:
    - port: 8080
      targetPort: 8080
      name: http
      protocol: TCP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: autoshift-policy-report
spec:
  to:
    kind: Service
    name: autoshift-policy-report
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureTerminationPolicy: Redirect
  wildcardPolicy: None
